Design favorites API contract (routes, swagger schemas, stub controller)
Implements Task 195, part of PBI 62 (PBI 15: Create favorite list). AB#195 AB#62
